CMR-6161 updated to support both es1 and es7 added manual tester
